// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When parsing CSV should be able to handle out of order CSV headers when merging 1`] = `
Object {
  "body": Array [
    "105.911369,3.79772,2020-06-20T00:00:00.323Z,-13.6,GROUND,toa,1592611200.323,1,-12,0.25,0.25",
    "-76.645326,39.344666,2020-06-20T00:00:00.628Z,0,CLOUD,toa,1592611200.628,1,-49,0.25,0.25",
    "-76.516297,39.093173,2020-06-20T00:00:00.629Z,-6.4,GROUND,toa,1592611200.629,1,9,0.25,0.25",
    "-76.751111,39.359796,2020-06-20T00:00:00.631Z,0,CLOUD,toa,1592611200.631,1,-28,0.5,0.25",
    "-76.699283,39.357346,2020-06-20T00:00:00.631Z,0,CLOUD,toa,1592611200.631,6,-80,1.75,0.25",
    "-76.627881,39.360246,2020-06-20T00:00:00.631Z,-66.2,GROUND,toa,1592611200.631,1,-41,0.25,0.25",
    "-76.623955,39.355165,2020-06-20T00:00:00.631Z,-65,GROUND,toa,1592611200.631,1,82,0.5,0.25",
    "-76.666255,39.283483,2020-06-20T00:00:00.653Z,0,CLOUD,toa,1592611200.653,1,-52,0.25,0.25",
    "-76.568837,39.355049,2020-06-20T00:00:00.653Z,-20.3,GROUND,toa,1592611200.653,1,-1,0.25,0.25",
    "-76.522296,39.390466,2020-06-20T00:00:00.653Z,0,CLOUD,toa,1592611200.653,1,-74,0.5,0.25",
    "-80.874821,34.163358,2020-06-20T00:01:00.385Z,0,CLOUD,toa,1592611260.385,1,-74,0.5,0.25",
    "-82.357371,30.250675,2020-06-20T00:01:00.552Z,-26,GROUND,toa,1592611260.552,2,-89,0.75,0.25",
    "-82.353037,30.263559,2020-06-20T00:01:00.552Z,0,CLOUD,toa,1592611260.552,1,83,0.25,0.25",
    "-91.441549,16.24059,2020-06-20T00:01:00.800Z,-41.3,GROUND,toa,1592611260.8,6,11,1.75,0.25",
    "26.773836,59.46069,2020-06-20T00:01:01.000Z,-25.2,GROUND,toa,1592611261,1,7,0.5,0.25",
    "26.923863,59.507565,2020-06-20T00:01:01.028Z,-15.1,GROUND,toa,1592611261.028,3,11,0.75,0.25",
    "26.904206,59.500731,2020-06-20T00:01:01.077Z,-14,GROUND,toa,1592611261.077,3,11,1,0.25",
    "11.790852,56.359199,2020-06-20T00:01:01.296Z,95.3,GROUND,toa,1592611261.296,1,19,0.25,0.25",
    "-101.650011,32.374309,2020-06-20T00:01:01.382Z,0,CLOUD,toa,1592611261.382,16,34,4.25,0.5",
    "-101.366501,32.777182,2020-06-20T00:01:01.382Z,-29.9,GROUND,toa,1592611261.382,1,-24,0.25,0.25",
  ],
  "header": "lon,lat,dateTime,kA,strike_type,source,unixTime,GDOP,ellipse_bearing,ellipse_major_axis,ellipse_minor_axis",
}
`;

exports[`When parsing CSV should be able to merge multiple collections 1`] = `
Object {
  "body": Array [
    "105.911369,3.79772,2020-06-20T00:00:00.323Z,-13.6,GROUND,toa,1592611200.323,1,-12,0.25,0.25",
    "-76.645326,39.344666,2020-06-20T00:00:00.628Z,0,CLOUD,toa,1592611200.628,1,-49,0.25,0.25",
    "-76.516297,39.093173,2020-06-20T00:00:00.629Z,-6.4,GROUND,toa,1592611200.629,1,9,0.25,0.25",
    "-76.751111,39.359796,2020-06-20T00:00:00.631Z,0,CLOUD,toa,1592611200.631,1,-28,0.5,0.25",
    "-76.699283,39.357346,2020-06-20T00:00:00.631Z,0,CLOUD,toa,1592611200.631,6,-80,1.75,0.25",
    "-76.627881,39.360246,2020-06-20T00:00:00.631Z,-66.2,GROUND,toa,1592611200.631,1,-41,0.25,0.25",
    "-76.623955,39.355165,2020-06-20T00:00:00.631Z,-65,GROUND,toa,1592611200.631,1,82,0.5,0.25",
    "-76.666255,39.283483,2020-06-20T00:00:00.653Z,0,CLOUD,toa,1592611200.653,1,-52,0.25,0.25",
    "-76.568837,39.355049,2020-06-20T00:00:00.653Z,-20.3,GROUND,toa,1592611200.653,1,-1,0.25,0.25",
    "-76.522296,39.390466,2020-06-20T00:00:00.653Z,0,CLOUD,toa,1592611200.653,1,-74,0.5,0.25",
    "-80.874821,34.163358,2020-06-20T00:01:00.385Z,0,CLOUD,toa,1592611260.385,1,-74,0.5,0.25",
    "-82.357371,30.250675,2020-06-20T00:01:00.552Z,-26,GROUND,toa,1592611260.552,2,-89,0.75,0.25",
    "-82.353037,30.263559,2020-06-20T00:01:00.552Z,0,CLOUD,toa,1592611260.552,1,83,0.25,0.25",
    "-91.441549,16.24059,2020-06-20T00:01:00.800Z,-41.3,GROUND,toa,1592611260.8,6,11,1.75,0.25",
    "26.773836,59.46069,2020-06-20T00:01:01.000Z,-25.2,GROUND,toa,1592611261,1,7,0.5,0.25",
    "26.923863,59.507565,2020-06-20T00:01:01.028Z,-15.1,GROUND,toa,1592611261.028,3,11,0.75,0.25",
    "26.904206,59.500731,2020-06-20T00:01:01.077Z,-14,GROUND,toa,1592611261.077,3,11,1,0.25",
    "11.790852,56.359199,2020-06-20T00:01:01.296Z,95.3,GROUND,toa,1592611261.296,1,19,0.25,0.25",
    "-101.650011,32.374309,2020-06-20T00:01:01.382Z,0,CLOUD,toa,1592611261.382,16,34,4.25,0.5",
    "-101.366501,32.777182,2020-06-20T00:01:01.382Z,-29.9,GROUND,toa,1592611261.382,1,-24,0.25,0.25",
    "-79.357062,49.79451,2020-06-20T00:02:00.077Z,-56.6,GROUND,toa,1592611320.077,2,23,0.5,0.25",
    "-101.955629,39.873289,2020-06-20T00:02:00.235Z,28.7,GROUND,toa,1592611320.235,1,29,0.25,0.25",
    "-101.995631,39.87736,2020-06-20T00:02:00.289Z,19,GROUND,toa,1592611320.289,1,-11,0.25,0.25",
    "105.181056,3.354772,2020-06-20T00:02:00.981Z,-13.1,GROUND,toa,1592611320.981,1,-9,0.25,0.25",
    "-79.969339,35.098912,2020-06-20T00:02:01.364Z,-18.2,GROUND,toa,1592611321.364,1,-76,0.5,0.25",
    "-80.069913,34.980473,2020-06-20T00:02:01.370Z,-35.9,GROUND,toa,1592611321.37,1,-21,0.25,0.25",
    "105.974937,3.83109,2020-06-20T00:02:01.517Z,-29.8,GROUND,toa,1592611321.517,1,-24,0.25,0.25",
    "105.677619,3.858295,2020-06-20T00:02:01.544Z,0,CLOUD,toa,1592611321.544,1,16,0.5,0.25",
    "105.9039,3.811184,2020-06-20T00:02:01.544Z,-11,GROUND,toa,1592611321.544,1,-8,0.25,0.25",
    "105.678063,3.858444,2020-06-20T00:02:01.561Z,-7.8,GROUND,toa,1592611321.561,1,16,0.5,0.25",
  ],
  "header": "lon,lat,dateTime,kA,strike_type,source,unixTime,GDOP,ellipse_bearing,ellipse_major_axis,ellipse_minor_axis",
}
`;

exports[`When parsing CSV should be able to merge two collections 1`] = `
Object {
  "body": Array [
    "105.911369,3.79772,2020-06-20T00:00:00.323Z,-13.6,GROUND,toa,1592611200.323,1,-12,0.25,0.25",
    "-76.645326,39.344666,2020-06-20T00:00:00.628Z,0,CLOUD,toa,1592611200.628,1,-49,0.25,0.25",
    "-76.516297,39.093173,2020-06-20T00:00:00.629Z,-6.4,GROUND,toa,1592611200.629,1,9,0.25,0.25",
    "-76.751111,39.359796,2020-06-20T00:00:00.631Z,0,CLOUD,toa,1592611200.631,1,-28,0.5,0.25",
    "-76.699283,39.357346,2020-06-20T00:00:00.631Z,0,CLOUD,toa,1592611200.631,6,-80,1.75,0.25",
    "-76.627881,39.360246,2020-06-20T00:00:00.631Z,-66.2,GROUND,toa,1592611200.631,1,-41,0.25,0.25",
    "-76.623955,39.355165,2020-06-20T00:00:00.631Z,-65,GROUND,toa,1592611200.631,1,82,0.5,0.25",
    "-76.666255,39.283483,2020-06-20T00:00:00.653Z,0,CLOUD,toa,1592611200.653,1,-52,0.25,0.25",
    "-76.568837,39.355049,2020-06-20T00:00:00.653Z,-20.3,GROUND,toa,1592611200.653,1,-1,0.25,0.25",
    "-76.522296,39.390466,2020-06-20T00:00:00.653Z,0,CLOUD,toa,1592611200.653,1,-74,0.5,0.25",
    "-80.874821,34.163358,2020-06-20T00:01:00.385Z,0,CLOUD,toa,1592611260.385,1,-74,0.5,0.25",
    "-82.357371,30.250675,2020-06-20T00:01:00.552Z,-26,GROUND,toa,1592611260.552,2,-89,0.75,0.25",
    "-82.353037,30.263559,2020-06-20T00:01:00.552Z,0,CLOUD,toa,1592611260.552,1,83,0.25,0.25",
    "-91.441549,16.24059,2020-06-20T00:01:00.800Z,-41.3,GROUND,toa,1592611260.8,6,11,1.75,0.25",
    "26.773836,59.46069,2020-06-20T00:01:01.000Z,-25.2,GROUND,toa,1592611261,1,7,0.5,0.25",
    "26.923863,59.507565,2020-06-20T00:01:01.028Z,-15.1,GROUND,toa,1592611261.028,3,11,0.75,0.25",
    "26.904206,59.500731,2020-06-20T00:01:01.077Z,-14,GROUND,toa,1592611261.077,3,11,1,0.25",
    "11.790852,56.359199,2020-06-20T00:01:01.296Z,95.3,GROUND,toa,1592611261.296,1,19,0.25,0.25",
    "-101.650011,32.374309,2020-06-20T00:01:01.382Z,0,CLOUD,toa,1592611261.382,16,34,4.25,0.5",
    "-101.366501,32.777182,2020-06-20T00:01:01.382Z,-29.9,GROUND,toa,1592611261.382,1,-24,0.25,0.25",
  ],
  "header": "lon,lat,dateTime,kA,strike_type,source,unixTime,GDOP,ellipse_bearing,ellipse_major_axis,ellipse_minor_axis",
}
`;

exports[`When parsing CSV should return valid CSV 1`] = `
Object {
  "body": Array [
    "105.911369,3.79772,2020-06-20T00:00:00.323Z,-13.6,GROUND,toa,1592611200.323,1,-12,0.25,0.25",
    "-76.645326,39.344666,2020-06-20T00:00:00.628Z,0,CLOUD,toa,1592611200.628,1,-49,0.25,0.25",
    "-76.516297,39.093173,2020-06-20T00:00:00.629Z,-6.4,GROUND,toa,1592611200.629,1,9,0.25,0.25",
    "-76.751111,39.359796,2020-06-20T00:00:00.631Z,0,CLOUD,toa,1592611200.631,1,-28,0.5,0.25",
    "-76.699283,39.357346,2020-06-20T00:00:00.631Z,0,CLOUD,toa,1592611200.631,6,-80,1.75,0.25",
    "-76.627881,39.360246,2020-06-20T00:00:00.631Z,-66.2,GROUND,toa,1592611200.631,1,-41,0.25,0.25",
    "-76.623955,39.355165,2020-06-20T00:00:00.631Z,-65,GROUND,toa,1592611200.631,1,82,0.5,0.25",
    "-76.666255,39.283483,2020-06-20T00:00:00.653Z,0,CLOUD,toa,1592611200.653,1,-52,0.25,0.25",
    "-76.568837,39.355049,2020-06-20T00:00:00.653Z,-20.3,GROUND,toa,1592611200.653,1,-1,0.25,0.25",
    "-76.522296,39.390466,2020-06-20T00:00:00.653Z,0,CLOUD,toa,1592611200.653,1,-74,0.5,0.25",
  ],
  "header": "lon,lat,dateTime,kA,strike_type,source,unixTime,GDOP,ellipse_bearing,ellipse_major_axis,ellipse_minor_axis",
}
`;
